fix: add missing values for flex-grid align, justify and place

--- a/packages/utils/scss/_variables.scss
+++ b/packages/utils/scss/_variables.scss
@@ -382,77 +382,132 @@ $kendo-utils: (
     "align-content": (
         normal: normal,
         stretch: stretch,
-        start: flex-start,
-        end: flex-end,
         center: center,
+        start: start,
+        end: end,
+        flex-start: flex-start,
+        flex-end: flex-end,
+        baseline: baseline,
+        first-baseline: first baseline,
+        last-baseline: last baseline,
         between: space-between,
         around: space-around,
         evenly: space-evenly
     ),
     "align-items": (
         normal: normal,
-        start: flex-start,
-        end: flex-end,
+        stretch: stretch,
         center: center,
-        stretch: stretch
+        start: start,
+        end: end,
+        flex-start: flex-start,
+        flex-end: flex-end,
+        baseline: baseline,
+        first-baseline: first baseline,
+        last-baseline: last baseline,
+        self-start: self-start,
+        self-end: self-end
     ),
     "align-self": (
         auto: auto,
         normal: normal,
         stretch: stretch,
-        start: flex-start,
-        end: flex-end,
-        center: center
+        center: center,
+        start: start,
+        end: end,
+        flex-start: flex-start,
+        flex-end: flex-end,
+        baseline: baseline,
+        first-baseline: first baseline,
+        last-baseline: last baseline,
+        self-start: self-start,
+        self-end: self-end
     ),
     "justify-content": (
         normal: normal,
-        start: flex-start,
-        end: flex-end,
+        stretch: stretch,
         center: center,
+        start: start,
+        end: end,
+        flex-start: flex-start,
+        flex-end: flex-end,
+        left: left,
+        right: right,
+        baseline: baseline,
+        first-baseline: first baseline,
+        last-baseline: last baseline,
         between: space-between,
         around: space-around,
-        evenly: space-evenly,
-        stretch: stretch
+        evenly: space-evenly
     ),
     "justify-items": (
         normal: normal,
-        start: flex-start,
-        end: flex-end,
+        stretch: stretch,
         center: center,
-        stretch: stretch
+        start: start,
+        end: end,
+        flex-start: flex-start,
+        flex-end: flex-end,
+        self-start: self-start,
+        self-end: self-end,
+        left: left,
+        right: right,
+        baseline: baseline,
+        first-baseline: first baseline,
+        last-baseline: last baseline
     ),
     "justify-self": (
         auto: auto,
         normal: normal,
-        start: flex-start,
-        end: flex-end,
+        stretch: stretch,
         center: center,
-        stretch: stretch
+        start: start,
+        end: end,
+        flex-start: flex-start,
+        flex-end: flex-end,
+        self-start: self-start,
+        self-end: self-end,
+        baseline: baseline,
+        first-baseline: first baseline,
+        last-baseline: last baseline
     ),
     "place-content": (
         normal: normal,
-        start: flex-start,
-        end: flex-end,
+        stretch: stretch,
         center: center,
+        start: start,
+        end: end,
+        flex-start: flex-start,
+        flex-end: flex-end,
+        baseline: baseline,
         between: space-between,
         around: space-around,
-        evenly: space-evenly,
-        stretch: stretch
+        evenly: space-evenly
     ),
     "place-items": (
         normal: normal,
-        start: flex-start,
-        end: flex-end,
+        stretch: stretch,
         center: center,
-        stretch: stretch
+        start: start,
+        end: end,
+        flex-start: flex-start,
+        flex-end: flex-end,
+        self-start: flex-start,
+        self-end: flex-end,
+        baseline: baseline
     ),
     "place-self": (
         auto: auto,
         normal: normal,
+        stretch: stretch,
+        center: center,
         start: flex-start,
         end: flex-end,
-        center: center,
-        stretch: stretch
+        flex-start: flex-start,
+        flex-end: flex-end,
+        self-start: flex-start,
+        self-end: flex-end,
+        baseline: baseline
     ),
 
     // Spacing
