fix(module-system): remove cursor from component list since it is utils now

--- a/packages/core/scss/module-system/_components.scss
+++ b/packages/core/scss/module-system/_components.scss
@@ -2,7 +2,6 @@ $kendo-components: (
     // Typography and utils
     "typography",
     "utils",
-    "cursor",
     "draggable",
 
     // Generic content
@@ -131,7 +130,7 @@ $kendo-components: (
     "timeline",
     "pdf-viewer",
     "scroller",
-    "scroll-view",
+    "scrollview",
 
     // Dataviz
     "dataviz",
