fix(module-system): use scrollview for component name instead of scroll-view

--- a/packages/core/scss/module-system/_dependencies.scss
+++ b/packages/core/scss/module-system/_dependencies.scss
@@ -336,7 +336,7 @@ $_kendo-dependencies: (
         "tooltip"
     ),
     scroller: (),
-    scroll-view: (
+    scrollview: (
         "button"
     ),
     searchbox: (
