--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -1316,7 +1316,8 @@
         cursor: pointer;
 
         > .k-icon,
-        > .k-svg-icon {
+        > .k-svg-icon,
+        > .k-expander-indicator {
             margin-inline-end: $kendo-icon-spacing;
         }
     }
