--- a/packages/default/scss/spreadsheet/_layout.scss
+++ b/packages/default/scss/spreadsheet/_layout.scss
@@ -632,7 +632,8 @@
             cursor: pointer;
 
             > .k-icon,
-            > .k-svg-icon {
+            > .k-svg-icon,
+            > .k-expander-indicator {
                 margin-right: $kendo-padding-md-y;
             }
         }
