fix: always use optional flag when extending

--- a/packages/default/scss/button/_layout.scss
+++ b/packages/default/scss/button/_layout.scss
@@ -283,7 +283,7 @@
     .k-button {
 
         &::before {
-            @extend .k-button-overlay;
+            @extend .k-button-overlay !optional;
         }
 
         // Hovered state
