--- a/packages/fluent/scss/forms/_layout.scss
+++ b/packages/fluent/scss/forms/_layout.scss
@@ -126,7 +126,7 @@
 
     // Form Buttons Container
     .k-form-buttons {
-        @extend .k-actions;
+        @extend .k-actions !optional;
         padding: 0;
         overflow: visible;
     }
