--- a/packages/fluent/scss/grid/_layout.scss
+++ b/packages/fluent/scss/grid/_layout.scss
@@ -331,7 +331,7 @@
 
     // Alias used in jQuery
     .k-reorder-cue {
-        @extend .k-grouping-dropclue;
+        @extend .k-grouping-dropclue !optional;
     }
 
     // Grid header / footer
