--- a/packages/nouvelle/scss/actions/_layout.scss
+++ b/packages/nouvelle/scss/actions/_layout.scss
@@ -46,7 +46,7 @@
     .k-edit-buttons,
     .k-action-buttons,
     .k-columnmenu-actions {
-        @extend .k-actions;
+        @extend .k-actions !optional;
     }
 
 
