--- a/packages/default/scss/pager/_layout.scss
+++ b/packages/default/scss/pager/_layout.scss
@@ -75,7 +75,7 @@
 
     // Pager items
     .k-pager-nav {
-        @extend %base-pager-item;
+        @extend %base-pager-item !optional;
     }
 
 
@@ -122,7 +122,7 @@
 
     // Pager input
     .k-pager-input {
-        @extend %base-pager-section;
+        @extend %base-pager-section !optional;
 
         .k-textbox {
             margin: 0 1ex;
@@ -133,7 +133,7 @@
 
     // Pager sizes
     .k-pager-sizes {
-        @extend %base-pager-section;
+        @extend %base-pager-section !optional;
 
         .k-dropdown-list,
         > select {
@@ -158,7 +158,7 @@
 
     // Pager info
     .k-pager-info {
-        @extend %base-pager-section;
+        @extend %base-pager-section !optional;
         text-align: right;
         justify-content: flex-end;
         flex: 1 1 0%;
@@ -182,7 +182,7 @@
             border-color: inherit;
 
             select.k-dropdown-list {
-                @extend %base-pager-section;
+                @extend %base-pager-section !optional;
                 @if ($kendo-pager-section-spacing) {
                     margin-left: $kendo-pager-section-spacing;
                     margin-right: $kendo-pager-section-spacing;
