--- a/packages/fluent/scss/action-buttons/_layout.scss
+++ b/packages/fluent/scss/action-buttons/_layout.scss
@@ -26,7 +26,7 @@
     .k-edit-buttons,
     .k-action-buttons,
     .k-columnmenu-actions {
-        @extend .k-actions;
+        @extend .k-actions !optional;
     }
 
     // Actions align
