--- a/packages/fluent/scss/scroller/_layout.scss
+++ b/packages/fluent/scss/scroller/_layout.scss
@@ -33,7 +33,7 @@
     .km-scroller-pull .km-template {
         display: inline-block;
         min-width: 200px;
-        text-align: left;
+        text-align: start;
     }
     .km-load-more .km-icon,
     .km-widget .km-scroller-pull .km-icon {
