--- a/packages/material/scss/scheduler/_layout.scss
+++ b/packages/material/scss/scheduler/_layout.scss
@@ -18,7 +18,7 @@
 
     // View header
     .k-scheduler-header {
-        text-align: left;
+        text-align: start;
 
         th,
         td {
