--- a/packages/fluent/scss/progressbar/_layout.scss
+++ b/packages/fluent/scss/progressbar/_layout.scss
@@ -233,7 +233,7 @@
 
     .k-circular-progressbar {
         display: inline-block;
-        text-align: left;
+        text-align: start;
         position: relative;
     }
 
