--- a/packages/fluent/scss/timeline/_layout.scss
+++ b/packages/fluent/scss/timeline/_layout.scss
@@ -167,7 +167,7 @@
             padding-inline-end: var( --kendo-timeline-items-padding, #{ $kendo-timeline-items-padding} );
             margin-block-start: var( --kendo-timeline-track-event-offset, #{ $kendo-timeline-track-event-offset } );
             transform: translate(-100%, -50%);
-            text-align: right;
+            text-align: end;
         }
 
         .k-timeline-event {
@@ -251,7 +251,7 @@
                     flex-direction: row-reverse;
 
                     .k-timeline-date-wrap {
-                        text-align: left;
+                        text-align: start;
                         padding-inline-end: 0;
                         padding-inline-start: var( --kendo-timeline-items-padding, #{ $kendo-timeline-items-padding } );
                     }
